# pytest-reporter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: basic.md
.engram/: manifest.json
.github/workflows/: ci.yml
docs/: guide.md  quickstart.md
examples/: pyproject.toml
examples/tests/: conftest.py
examples/tests/API/: test_endpoints.py  test_graphql.py  test_websocket.py
examples/tests/Authentication/Login/: test_login.py  test_oauth.py
examples/tests/Authentication/Registration/: test_signup.py
examples/tests/DataAnalysis/Reports/: test_inventory_report.py  test_sales_report.py
examples/tests/DataAnalysis/Validation/: test_data_quality.py
examples/tests/Hardware/Measurements/: test_power_supply.py  test_thermal.py
examples/tests/Hardware/Verification/: test_power_supply.py  test_signal_chain.py
examples/tests/Infrastructure/Cache/: test_redis.py
examples/tests/Infrastructure/Database/: test_migrations.py  test_queries.py
examples/tests/Payments/Checkout/: test_cart.py  test_checkout.py
examples/tests/Payments/Refunds/: test_refunds.py
examples/tests/UI/Rendering/: test_components.py  test_forms.py
examples/tests/UI/Screenshots/: test_pages.py
src/pytest_report/: __init__.py  plugin.py  test_summary.py
src/pytest_report/logger/: __init__.py  logger.py
src/pytest_report/meta/: __init__.py  metainfo.py
src/pytest_report/reporthtml/: index.html  styles.css
src/pytest_reporter/: __init__.py  _collector.py  _console_capture.py  _context.py  _dashboard_config.py  _hookspecs.py  _html_builder.py  _json_writer.py  _junit_writer.py  _logger.py  _markup.py  _phase_capture.py  _procedure.py  _report_builder.py  _retry.py  _safety.py  _symlinks.py  _table.py  _types.py  fmt.py  plugin.py  reporter.py
src/pytest_reporter/_html_builder/: __init__.py  _css.py  _degraded.py  _js.py  _template.py
src/pytest_reporter/html-reporter/: html_reporter.py
src/pytest_reporter/html-reporter/src/: index.html
src/pytest_reporter/logger/: logger.py
tests/: test_class_test_names.py  test_console_capture.py  test_crash_safety.py  test_dashboard_config.py  test_dashboard_hook.py  test_dashboard_render.py  test_html_check_card_chevron.py  test_html_composite_checks.py  test_html_durations.py  test_html_guard_check.py  test_html_plugins.py  test_html_report_polish.py  test_html_retry_pill.py  test_html_robustness.py  test_html_seed.py  test_logger.py  test_metadata.py  test_path_sanitization.py  test_plugin.py  test_procedure.py  test_public_api.py  test_retries.py  test_retry_fixture_scope.py  test_retry_windows_paths.py  test_safety.py  test_session_log.py  test_table.py  test_tree_compaction.py  test_verify_integration.py  test_verify_outdated_warning.py
