[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-reporter"
version = "0.1.0"
description = "A pytest plugin for generating custom test reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4",
    "pytest-verify",
]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.entry-points.pytest11]
reporter = "pytest_reporter.plugin"

[project.optional-dependencies]
verify = ["pytest-verify"]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "ruff>=0.4",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_reporter"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["pytest_reporter"]

[[tool.mypy.overrides]]
# pytest-verify is an optional integration. Treat it as opaque so the strict
# build is deterministic whether or not it is installed (and typed) in a given
# environment — its real types must not leak into this package's checking.
module = ["pytest_verify", "pytest_verify.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"src/pytest_reporter/_html_builder/_css.py" = ["E501"]
"src/pytest_reporter/_html_builder/_js.py" = ["E501"]
"src/pytest_reporter/_html_builder/_template.py" = ["E501"]

[tool.uv.sources]
pytest-verify = { git = "https://github.com/guillegil/pytest_verify.git" }
